<resources>
    <string name="app_name">Skopje Movie Schedule</string>
    <string name="title_activity_main_movies_view">Skopje Movie Schedule</string>
    <string name="title_movies">Movies</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_theaters">Theaters</string>
    <string name="in_theaters_tab_text_1">In Theaters</string>
    <string name="in_theaters_tab_text_2">Coming Soon</string>
    <string name="theater_list_theater_name">CINEPLEXX SKOPJE CITY MALL</string>
    <string name="theater_list_theater_address">bul. Partizanski Odredi</string>
    <string name="theater_list_theater_distance">1.2km</string>
    <string name="theater_list_theater_opennow">open</string>
    <string name="theater_list_theater_opennow_false">CLOSED</string>
    <string name="detail_movie_title">Honeyland</string>
    <string name="detail_movie_year">2019</string>
    <string name="detail_movie_runtime">96min</string>
    <string name="detail_movie_divider">|</string>
    <string name="detail_movie_genre_title">Genre:</string>
    <string name="detail_movie_genre_subtitle">Documentary, Drama</string>
    <string name="detail_movie_director_title">Director:</string>
    <string name="detail_movie_director_subtitle">Wes Anderson, Stanley Kubrick</string>
    <string name="detail_movie_actors_title">Actors:</string>
    <string name="detail_movie_actors_subtitle">Harrison Ford, Rutger Hauer, Sean Young, Edward James Olmos</string>
    <string name="detail_movie_description">The last female bee-hunter in Europe must save the bees and return the natural balance in Honeyland</string>
    <string name="detail_movie_schedule_title">Movie Schedule:</string>
    <string name="reservations_signin">Sign In</string>
    <string name="title_discover">Discover</string>
    <string name="title_discovery">Discover</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="discover_tab_text_1">Trending</string>
    <string name="discover_tab_text_2">Popular</string>
    <string name="discover_tab_text_3">Top Rated</string>
    <string name="discover_tab_text_4">Now Playing</string>
    <string name="discover_tab_text_5">Upcoming</string>
    <string name="title_activity_discover">Discover</string>
    <string name="detailed_tmdb_tab_text_1">Cast</string>
    <string name="detailed_tmdb_tab_text_2">Videos</string>
    <string name="detailed_tmdb_tab_text_3">Reviews</string>
    <string name="detailed_tmdb_tab_text_4">Recommendations</string>
    <string name="detailed_person_tab_text_1">Movies</string>
    <string name="detailed_person_tab_text_2">TV Shows</string>
    <string name="detailed_person_tab_text_3">Images</string>
    <string name="trim_collapsed_text"> Show more</string>
    <string name="trim_expanded_text"> Show less</string>
    <string name="review_author">StefanKrstikj</string>
    <string name="review_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="string_discovery_actionbar">Search movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_d_e_l_e_t_e_t_h_i_s">DELETETHIS</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


</resources>
