<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.movies.detailed_view.DetailMovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:toolbarId="@+id/toolbar_fragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView_details_movie"
                    android:layout_width="117dp"
                    android:layout_height="178dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:transitionName="imageMain"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/dolittle_poster_mkd" />

                <TextView
                    android:id="@+id/textView_title_movie"
                    android:layout_width="236dp"
                    android:layout_height="36dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:autoSizeMaxTextSize="24sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/detail_movie_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/color_text_subtitle_light"
                    android:textStyle="bold"
                    android:transitionName="textMain"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_details_movie"
                    app:layout_constraintTop_toTopOf="@+id/imageView_details_movie" />

                <TextView
                    android:id="@+id/textView_year"
                    style="@style/TextCategorySubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/detail_movie_year"
                    android:textSize="16dp"
                    app:layout_constraintStart_toStartOf="@+id/textView_title_movie"
                    app:layout_constraintTop_toBottomOf="@+id/textView_title_movie" />

                <TextView
                    android:id="@+id/textView_runtime"
                    style="@style/TextCategorySubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/detail_movie_runtime"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_year"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView_year" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/TextCategoryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/detail_movie_divider"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_year"
                    app:layout_constraintStart_toEndOf="@+id/textView_year"
                    app:layout_constraintTop_toTopOf="@+id/textView_year" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/TextCategoryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/detail_movie_genre_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    app:layout_constraintStart_toStartOf="@+id/textView_year"
                    app:layout_constraintTop_toBottomOf="@+id/textView_year" />

                <TextView
                    android:id="@+id/textView_genre"
                    style="@style/TextCategorySubtitle"
                    android:layout_width="250dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/detail_movie_genre_subtitle"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView_plot"
                    style="@style/TextCategorySubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="14sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/detail_movie_description"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView_details_movie" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/detailed_tmdb_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trailer" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cast" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reviews" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recommendations" />
        </com.google.android.material.tabs.TabLayout>
    </androidx.viewpager.widget.ViewPager>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
